weather-client/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-client-london
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-client
      city: london
  template:
    metadata:
      labels:
        app: weather-client
        city: london
    spec:
      containers:
      - image: ghcr.io/fpommerening/mqtt.weather-client:latest
        name: app
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-client-hamburg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-client
      city: hamburg
  template:
    metadata:
      labels:
        app: weather-client
        city: hamburg
    spec:
      containers:
      - image: ghcr.io/fpommerening/mqtt.weather-client:latest
        name: app
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-client-leipzig
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-client
      city: leipzig
  template:
    metadata:
      labels:
        app: weather-client
        city: leipzig
    spec:
      containers:
      - image: ghcr.io/fpommerening/mqtt.weather-client:latest
        name: app
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-client-muenchen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-client
      city: muenchen
  template:
    metadata:
      labels:
        app: weather-client
        city: muenchen
    spec:
      containers:
      - image: ghcr.io/fpommerening/mqtt.weather-client:latest
        name: app
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-client-magdeburg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-client
      city: magdeburg
  template:
    metadata:
      labels:
        app: weather-client
        city: magdeburg
    spec:
      containers:
      - image: ghcr.io/fpommerening/mqtt.weather-client:latest
        name: app
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-client-berlin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-client
      city: berlin
  template:
    metadata:
      labels:
        app: weather-client
        city: berlin
    spec:
      containers:
      - image: ghcr.io/fpommerening/mqtt.weather-client:latest
        name: app
