weather-client/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-client-london
spec:
  selector:
    app: weather-client
    city: london
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: weather-client-hamburg
spec:
  selector:
    app: weather-client
    city: hamburg
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: weather-client-leipzig
spec:
  selector:
    app: weather-client
    city: leipzig
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: weather-client-muenchen
spec:
  selector:
    app: weather-client
    city: muenchen
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: weather-client-magdeburg
spec:
  selector:
    app: weather-client
    city: magdeburg
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: weather-client-berlin
spec:
  selector:
    app: weather-client
    city: berlin
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
---
